--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "buffer": "^6.0.3",
     "dom": "^0.0.3",
     "file-saver": "^2.0.5",
+    "https-browserify": "^1.0.0",
+    "path-browserify": "^1.0.1",
     "pdfkit": "^0.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^6.23.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "sortablejs": "^1.15.2",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "npm run build && <deploy-command>"
   },
   "eslintConfig": {
     "extends": [
